[tool.poetry]
name = "marc-to-readable"
version = "0.1.0"
description = ""
authors = ["havardox <harald.varner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymarc = "^5.2.2"
py7zr = "^0.22.0"
requests = "^2.32.3"
ipykernel = "^6.29.5"
numpy = [
    {version = "^1.20.3", python = "<3.10"},
    {version = "^1.21.0", python = ">=3.10,<3.11"},
    {version = "^1.23.2", python = ">=3.11"}
]
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
